--- a/week-1/5-css-selectors/message-backgrounds.css
+++ b/week-1/5-css-selectors/message-backgrounds.css
@@ -1,1 +1,10 @@
 /* Add your CSS code below */
+article > p {
+  background-color: blue;
+}
+#first-message {
+  background-color: crimson;
+}
+.message--latest {
+  background-color: cyan;
+}
