--- a/week-1/7-css-box/styles.css
+++ b/week-1/7-css-box/styles.css
@@ -4,3 +4,11 @@
   border-radius: 4px;
   background: #fff;
 }
+.country {
+  border: 10px solid, white;
+  padding: 15px;
+  margin: 15px;
+  background: #fff;
+  width: 100px;
+  height: 15px;
+}
