--- a/week-1/8-advanced-selectors/styles.css
+++ b/week-1/8-advanced-selectors/styles.css
@@ -1,1 +1,16 @@
 /* Try different box model properties below */
+
+.site-header > p {
+  color: white;
+  margin-bottom: unset;
+}
+p {
+  word-spacing: 0.01rem;
+}
+.site-footer > p {
+  font-size: 12px;
+  text-align: center;
+}
+.message--unread > p {
+  box-shadow: 4px 4px 0 #dba944;
+}
