completed 8-advanced-selectors

--- a/week-1/8-advanced-selectors/styles.css
+++ b/week-1/8-advanced-selectors/styles.css
@@ -11,6 +11,6 @@ p {
   font-size: 12px;
   text-align: center;
 }
-.message--unread > p {
+.messages .message:last-child {
   box-shadow: 4px 4px 0 #dba944;
 }
