--- a/week-2/12-justify-content/flexbox.css
+++ b/week-2/12-justify-content/flexbox.css
@@ -7,3 +7,28 @@
 }
 
 /* Add your own CSS code below */
+
+.countries--first {
+  justify-content: flex-end;
+  font-size: 0.9rem;
+  font-weight: 500;
+}
+.countries--second {
+  justify-content: space-between;
+  font-size: 0.9rem;
+  font-weight: 500;
+}
+
+.countries--third {
+  flex-direction: column;
+  justify-content: flex-end;
+  font-size: 0.9rem;
+  font-weight: 500;
+}
+
+.countries--fourth {
+  flex-direction: column-reverse;
+  justify-content: space-between;
+  font-size: 0.9rem;
+  font-weight: 500;
+}
