--- a/week-2/13-align-items/flexbox.css
+++ b/week-2/13-align-items/flexbox.css
@@ -2,3 +2,30 @@
   display: flex;
 }
 /* Add your own CSS code below */
+.countries--first {
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  font-size: 0.9rem;
+  font-weight: 500;
+}
+.countries--second {
+  align-items: flex-end;
+  justify-content: flex-end;
+  font-size: 0.9rem;
+  font-weight: 500;
+}
+
+.countries--third {
+  flex-direction: column;
+  align-items: flex-end;
+  font-size: 0.9rem;
+  font-weight: 500;
+}
+
+.countries--fourth {
+  flex-direction: column-reverse;
+  align-items: center;
+  font-size: 0.9rem;
+  font-weight: 500;
+}
