--- a/week-2/14-order/flexbox.css
+++ b/week-2/14-order/flexbox.css
@@ -3,3 +3,61 @@
 }
 
 /* Add your own CSS code below */
+
+.countries--first .country--brazil {
+  order: 4;
+}
+.countries--first .country--ethiopia {
+  order: 1;
+}
+.countries--first .country--croatia {
+  order: 0;
+}
+.countries--first .country--laos {
+  order: 2;
+}
+.countries--first .country--uganda {
+  order: 3;
+}
+.countries--first {
+  font-size: 0.9rem;
+  font-weight: 500;
+}
+.countries--second .country--brazil {
+  order: 3;
+}
+.countries--second .country--ethiopia {
+  order: 1;
+}
+.countries--second .country--croatia {
+  order: 0;
+}
+.countries--second .country--laos {
+  order: 2;
+}
+.countries--second .country--uganda {
+  order: 4;
+}
+.countries--second {
+  font-size: 0.9rem;
+  font-weight: 500;
+}
+.countries--third .country--brazil {
+  order: 4;
+}
+.countries--third .country--ethiopia {
+  order: 2;
+}
+.countries--third .country--croatia {
+  order: 3;
+}
+.countries--third .country--laos {
+  order: 1;
+}
+.countries--third .country--uganda {
+  order: 0;
+}
+.countries--third {
+  font-size: 0.9rem;
+  font-weight: 500;
+}
