finished-29-combined-skills

--- a/week-3/29-combined-skills/styles.css
+++ b/week-3/29-combined-skills/styles.css
@@ -1,1 +1,45 @@
 /* Add your own CSS code below */
+#heart {
+  color: #c85308;
+}
+@media all and (min-width: 992px) {
+  .hero__title {
+    font-size: 60px;
+  }
+}
+.nav {
+  width: 100px;
+}
+.main-nav__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+@media (min-width: 767px) {
+  .site-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .views {
+    display: flex;
+    flex-direction: row;
+    column-gap: 2rem;
+  }
+
+  .views__all {
+    margin-left: auto;
+  }
+}
+.main-article {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  max-width: 50em;
+}
+.main-article p {
+  text-align: justify;
+}
